force-app/main/default/objects/Blacklisted_Word__c/Blacklisted_Word__c.object-meta.xml
<CustomObject>
    <label>Blacklisted Word</label>
    <nameField>
        <displayFormat>BLW-{0000}</displayFormat>
        <label>BlacklistedWord Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklisted Words</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>