force-app/main/default/objects/Blacklisted_Word__c/fields/Add_to_Compliance_Audit__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Compliance_Audit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if checked, any posts hitting a blacklist shall be added to an audit table indicating who made the post, the unscrubbed message, and the blacklisted word rule which triggered the compliance breach.</description>
    <label>Add to Compliance Audit</label>
    <type>Checkbox</type>
</CustomField>