force-app/main/default/objects/Blacklisted_Word__c/fields/Custom_Expression__c.field-meta.xml
<CustomField>
    <fullName>Custom_Expression__c</fullName>
    <description>User entered regular expression.</description>
    <inlineHelpText>Enter your own regular expression here. Setting this value to blank out the word field.
Don&apos;t forget to add \b at the start and end if you want to match on a whole word!</inlineHelpText>
    <label>Custom Expression</label>
    <length>200</length>
    <type>Text</type>
</CustomField>