force-app/main/default/objects/Blacklisted_Word__c/fields/RegexValue__c.field-meta.xml
<CustomField>
    <fullName>RegexValue__c</fullName>
    <label>RegexValue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>